Fixed spacing in the stats container and added more end game sound clips

--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ body{
     border:.3vw ridge red;
     box-sizing: border-box;
     display:inline-block;
-    background-color: transparent;
+    background-color: black;
     /*width:28%;*/
     /*height:32%;*/
     /*margin:.1vw;*/
@@ -166,11 +166,15 @@ h2{
     display:block;
     margin:auto 0;
     font-size: 2.5vw;
+    padding-bottom:2vh;
+    padding-top:3vh;
 }
 
 #reset-game, #restart-game{
     text-align:center;
     background-color:transparent;
     border:none;
+    padding-bottom:2vh;
+    padding-top:0vh;
 }
 
